Fixed Header z-index

--- a/src/components/Header/header.module.sass
+++ b/src/components/Header/header.module.sass
@@ -11,6 +11,7 @@
 	justify-content: space-between
 	padding-inline: 20px
 	background-color: $white
+	z-index: 1
 
 	a
 		text-decoration: none
